# ArtisticDesignPrinciplesAndPatterns

./: .gitignore  GtestInstallation.md  README.md  SingleResponsibilityPrinciple.cpp
DesignPatterns/: memento_uml_class_diagram
DesignPatterns/CommandPattern/: CommandPattern.cpp
DesignPatterns/MementoPattern/: Memento.md  MementoPattern.cpp
DesignPatterns/ReduxPattern/: ReduxClassDiagram  ReduxPattern  ReduxPattern.cpp
DesignPatterns/SpecificationPattern/: OCPProblem.cpp  OCPSolution.cpp
DesignPatterns/Visitor Pattern/: NeedForVisitor.cpp
DesignPatterns/VisitorPattern/: VisitorDoubleDispatch.cpp
DesignPrinciples/DependencyInversionPrinciple/: DIProblem.cpp  DISolution.cpp
DesignPrinciples/InterfaceSegregationPrinciple/: ISPProblem.cpp
DesignPrinciples/LiskovsSubstitutionPrinciple/LSPProblem/: .gitignore  CMakeLists.txt  driver.cpp  format.sh
DesignPrinciples/LiskovsSubstitutionPrinciple/LSPProblem/include/: Ceo.h  Employee.h  Manager.h
DesignPrinciples/LiskovsSubstitutionPrinciple/LSPProblem/src/: Ceo.cpp  Employee.cpp  Manager.cpp
DesignPrinciples/LiskovsSubstitutionPrinciple/LSPProblem/test/: CMakeLists.txt  test_my_project.cpp
DesignPrinciples/LiskovsSubstitutionPrinciple/LSPSolution/: CMakeLists.txt  driver.cpp
DesignPrinciples/LiskovsSubstitutionPrinciple/LSPSolution/include/: BaseEmployee.h  Ceo.h  Employee.h  IEmployee.h  IManaged.h  IManager.h  Manager.h
DesignPrinciples/LiskovsSubstitutionPrinciple/LSPSolution/src/: BaseEmployee.cpp  Ceo.cpp  Employee.cpp  Manager.cpp
DesignPrinciples/LiskovsSubstitutionPrinciple/LSPSolution/test/: CMakeLists.txt  test_my_project.cpp
DesignPrinciples/LiskovsSubstitutionPrinciple/simpleExampleForLSP/: LSPExample.cpp  LSPFixExample.cpp  LSPProblem  LSPProblem.cpp  LSPSolution  LSPSolution.cpp  README.md
DesignPrinciples/OpenClosedPrinciple/: OCPSolution.cpp  plantUML.txt
DesignPrinciples/SingleResponsibilityPrinciple/: SingleResponsibilityPrincipleProblem.cpp
InterfaceSegregationPrinciple/: ISPSolution.cpp
LowLevelDesign/DesignMeetingScheduler/: README.md
LowLevelDesign/DesignNotifyMe/: CMakeLists.txt  Readme.md  driver.cpp  format.sh
LowLevelDesign/DesignNotifyMe/include/prerequisite/: BindFunctionality.h  CallbackFunctionsUsingFunctional.h  CallbackFunctionsUsingLambda.h  DependencyInjection.h  SimpleObserver.h
LowLevelDesign/DesignNotifyMe/src/prerequisite/: DependencyInjection.cpp
OpenClosedPrinciple/: OCPProblem.cpp  OpenClosedPrincipleExtendedProblem.cpp  OpenClosedPrincipleProblem.cpp  OpenClosedPrincipleSolution.cpp
